// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ContributorForm should render display name field and identifier field 1`] = `
<React.Fragment>
  <div>
    Please 
    <b>
      add to a list of contributors below
    </b>
    , in the format and order that they are published.
  </div>
  <WithStyles(Grid)
    alignContent="flex-end"
    alignItems="flex-end"
    container={true}
    spacing={8}
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <WithStyles(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <WithStyles(FormControl)
        fullWidth={true}
      >
        <WithStyles(InputLabel)
          htmlFor="age-simple"
        >
          Org affiliation
        </WithStyles(InputLabel)>
        <WithStyles(Select)
          onChange={[Function]}
          value=""
        >
          <WithStyles(MenuItem)
            disabled={true}
            value=""
          >
            Organisational affiliation at time of publication
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value="UQ"
          >
            UQ
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value="NotUQ"
          >
            Not UQ
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
      </WithStyles(FormControl)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        autoComplete="off"
        disabled={true}
        error={true}
        fullWidth={true}
        id="nameAsPublishedField"
        label="Name as published"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Please type the name exactly as published"
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginBottom": 8,
        }
      }
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      >
        Add author
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</React.Fragment>
`;

exports[`Component ContributorForm should render display name field and role field 1`] = `
<React.Fragment>
  <div>
    Please 
    <b>
      add to a list of contributors below
    </b>
    , in the format and order that they are published.
  </div>
  <WithStyles(Grid)
    alignContent="flex-end"
    alignItems="flex-end"
    container={true}
    spacing={8}
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <WithStyles(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <WithStyles(FormControl)
        fullWidth={true}
      >
        <WithStyles(InputLabel)
          htmlFor="age-simple"
        >
          Org affiliation
        </WithStyles(InputLabel)>
        <WithStyles(Select)
          onChange={[Function]}
          value=""
        >
          <WithStyles(MenuItem)
            disabled={true}
            value=""
          >
            Organisational affiliation at time of publication
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value="UQ"
          >
            UQ
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value="NotUQ"
          >
            Not UQ
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
      </WithStyles(FormControl)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        autoComplete="off"
        disabled={true}
        error={true}
        fullWidth={true}
        id="nameAsPublishedField"
        label="Name as published"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Please type the name exactly as published"
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm={3}
      xs={12}
    >
      <Connect(WithStyles(AutoCompleteAsyncField))
        disabled={true}
        floatingLabelText="UQ username (if known)"
        hintText="eg. uqjsmith"
        id="identifierField"
        onChange={[Function]}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={5}
      sm={12}
      xs={12}
    >
      <Connect(WithStyles(AutoCompleteAsyncField))
        autoComplete="off"
        disabled={false}
        error={true}
        floatingLabelText="Creator role"
        fullWidth={true}
        hintText="Role of the creator in relation to the dataset"
        if="creatorRoleField"
        onChange={[Function]}
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginBottom": 8,
        }
      }
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      >
        Add author
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</React.Fragment>
`;

exports[`Component ContributorForm should render display name field only 1`] = `
<React.Fragment>
  <div>
    Please 
    <b>
      add to a list of contributors below
    </b>
    , in the format and order that they are published.
  </div>
  <WithStyles(Grid)
    alignContent="flex-end"
    alignItems="flex-end"
    container={true}
    spacing={8}
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <WithStyles(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <WithStyles(FormControl)
        fullWidth={true}
      >
        <WithStyles(InputLabel)
          htmlFor="age-simple"
        >
          Org affiliation
        </WithStyles(InputLabel)>
        <WithStyles(Select)
          onChange={[Function]}
          value=""
        >
          <WithStyles(MenuItem)
            disabled={true}
            value=""
          >
            Organisational affiliation at time of publication
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value="UQ"
          >
            UQ
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value="NotUQ"
          >
            Not UQ
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
      </WithStyles(FormControl)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        autoComplete="off"
        disabled={true}
        error={true}
        fullWidth={true}
        id="nameAsPublishedField"
        label="Name as published"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Please type the name exactly as published"
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm={3}
      xs={12}
    >
      <Connect(WithStyles(AutoCompleteAsyncField))
        disabled={true}
        floatingLabelText="UQ username (if known)"
        hintText="eg. uqjsmith"
        id="identifierField"
        onChange={[Function]}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginBottom": 8,
        }
      }
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      >
        Add author
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</React.Fragment>
`;
